; ModuleID = '/home/carl/AnghaBench/linux/block/extr_blk-rq-qos.c_rq_qos_exit.c'
source_filename = "/home/carl/AnghaBench/linux/block/extr_blk-rq-qos.c_rq_qos_exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.request_queue = type { %struct.rq_qos* }
%struct.rq_qos = type { %struct.TYPE_2__*, %struct.rq_qos* }
%struct.TYPE_2__ = type { i32 (%struct.rq_qos*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rq_qos_exit(%struct.request_queue* %0) #0 {
  %2 = alloca %struct.request_queue*, align 8
  %3 = alloca %struct.rq_qos*, align 8
  store %struct.request_queue* %0, %struct.request_queue** %2, align 8
  %4 = load %struct.request_queue*, %struct.request_queue** %2, align 8
  %5 = call i32 @blk_mq_debugfs_unregister_queue_rqos(%struct.request_queue* %4)
  br label %6

6:                                                ; preds = %11, %1
  %7 = load %struct.request_queue*, %struct.request_queue** %2, align 8
  %8 = getelementptr inbounds %struct.request_queue, %struct.request_queue* %7, i32 0, i32 0
  %9 = load %struct.rq_qos*, %struct.rq_qos** %8, align 8
  %10 = icmp ne %struct.rq_qos* %9, null
  br i1 %10, label %11, label %27

11:                                               ; preds = %6
  %12 = load %struct.request_queue*, %struct.request_queue** %2, align 8
  %13 = getelementptr inbounds %struct.request_queue, %struct.request_queue* %12, i32 0, i32 0
  %14 = load %struct.rq_qos*, %struct.rq_qos** %13, align 8
  store %struct.rq_qos* %14, %struct.rq_qos** %3, align 8
  %15 = load %struct.rq_qos*, %struct.rq_qos** %3, align 8
  %16 = getelementptr inbounds %struct.rq_qos, %struct.rq_qos* %15, i32 0, i32 1
  %17 = load %struct.rq_qos*, %struct.rq_qos** %16, align 8
  %18 = load %struct.request_queue*, %struct.request_queue** %2, align 8
  %19 = getelementptr inbounds %struct.request_queue, %struct.request_queue* %18, i32 0, i32 0
  store %struct.rq_qos* %17, %struct.rq_qos** %19, align 8
  %20 = load %struct.rq_qos*, %struct.rq_qos** %3, align 8
  %21 = getelementptr inbounds %struct.rq_qos, %struct.rq_qos* %20, i32 0, i32 0
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i32 (%struct.rq_qos*)*, i32 (%struct.rq_qos*)** %23, align 8
  %25 = load %struct.rq_qos*, %struct.rq_qos** %3, align 8
  %26 = call i32 %24(%struct.rq_qos* %25)
  br label %6

27:                                               ; preds = %6
  ret void
}

declare dso_local i32 @blk_mq_debugfs_unregister_queue_rqos(%struct.request_queue*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
